# NEVAssembly

./: .gitignore  .gitmodules  CMakeLists.txt  CODE OF CONDUCT.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TO-DO.md  main.cpp
.github/workflows/: cmake-multiple-platform.yml  cmake-single-platform.yml  codeql.yml
Abstract Factory Pattern/: Abstract.h  CMakeLists.txt  VWID4.h  main.cpp  test.cpp
Adapter Pattern/: 2150618田鑫阳 适配器模式.docx  Adapter.h  CMakeLists.txt  README.docx  test.cpp
Builder Pattern/: Builder.h  CMakeLists.txt  Car.cpp  Car.h  CarBuilder.cpp  CarBuilder.h  Director.cpp  Director.h  README.md
Chain of Responsibility Pattern/: CMakeLists.txt  responsibility.h  responsibility_chain.cpp  责任链模式.docx
Class Pool Design/: main.cpp  类池模式.docx
Command Pattern/: CMakeLists.txt  command.cpp  command.h  命令模式.docx
Decorator Pattern/: CMakeLists.txt  README.docx  decorator.cpp  decorator.h
Facade Pattern/: CMakeLists.txt  README.docx  navigation.cpp  navigation.h  外观模式.docx
Factory Pattern/: CMakeLists.txt  README.docx  factory.cpp  factory.h
Fluent Interface Pattern/: CMakeLists.txt  FluentInterface.cpp  FluentInterface.h  Input.cpp  Input.h  README.docx  main.cpp
Flyweight Pattern/: CMakeLists.txt  README.docx  flyweight.cpp  flyweight.h
Interpreter Pattern/: CMakeLists.txt  README.docx  VIN.cpp  data.json  解释器模式.docx
Iterator Pattern/: CMakeLists.txt  Iterator.cpp  Iterator.h  RailwayBureaus.cpp  RailwayBureaus.h  main.cpp  test.cpp
Mediator Pattern/: CMakeLists.txt  MediatorPattern.cpp  MediatorPattern.h  README.docx  main.cpp
Object Pool Pattern/: CMakeLists.txt  README.docx  main.cpp  类池模式.docx
Observer Pattern/: AssemblyCompany.cpp  BYD.cpp  BYD.h  CMakeLists.txt  NIO.cpp  NIO.h  Object.h  Purchase.cpp  Purchase.h  Tesla.cpp  Tesla.h  main.cpp  test.cpp  观察者模式文档.md  观察者模式类图.mdj
Prototy Pattern/: Prototype.h  test.cpp
Prototype Pattern/: CMakeLists.txt  Prototype.cpp  Prototype.h  README.docx  test.cpp
Specification Pattern/: CMakeLists.txt  CMakelists.txt  Specification.md  specification_template.hpp  specifications.hpp  test.cpp
State Pattern/: CMakeLists.txt  StatePattern.cpp  StatePattern.docx  StatePattern.h
Strategy Pattern/: CMakeLists.txt  dijkstra.cpp  dijkstra.h  main.cpp  startegy.cpp  strategy.h  test.cpp  utility.cpp  策略模式.docx
Visitor Pattern/: 2150618田鑫阳 访问者模式.docx  CMakeLists.txt  README.docx  test.cpp  visitor.h
docs/: FactoryREADME.docx  InterpreterREADME.docx  Iterator.docx  Observer.md  中介者模式.docx  享元模式.docx  原型模式.docx  命令模式.docx  对象池模式.docx  抽象工厂模式.docx  构建者模式.md  规约模式.docx  责任链模式.docx  迭代器模式.docx
src/: style.cpp
src/Abstract Factory Pattern/: BYDSeagull.cpp  BYDSeagull.h  CMakeLists.txt  VWID4.cpp  test.cpp
src/Adapter Pattern/: Adapter.cpp  Adapter.h  CMakeLists.txt  test.cpp
src/Builder Pattern/: Builder.h  CMakeLists.txt  Car.cpp  CarBuilder.h  EnumType.h  main.cpp  test.cpp
src/Chain of Responsibility Pattern/: CMakeLists.txt  responsibility.h  responsibility_chain.cpp
src/Command Pattern/: CMakeLists.txt  command.cpp  command.h  real.cpp
src/Decorator Pattern/: CMakeLists.txt  decorator.cpp  real.cpp
src/Facade Pattern/: CMakeLists.txt  navigation.cpp
src/Factory Pattern/: CMakeLists.txt  factory.cpp  factory.h
src/Fluent Interface Pattern/: CMakeLists.txt  FluentInterface.cpp  FluentInterface.h  Input.cpp  Input.h  main.cpp  real.cpp
src/Flyweight Pattern/: CMakeLists.txt  flyweight.cpp  real.cpp
src/Interpreter Pattern/: CMakeLists.txt  VIN.cpp
src/Iterator Pattern/: CMakeLists.txt  Iterator.cpp  Iterator.h  RailwayBureaus.cpp  RailwayBureaus.h  main.cpp  test.cpp
src/Mediator Pattern/: CMakeLists.txt  main.cpp
src/Object Pool Pattern/: CMakeLists.txt  main.cpp
src/Observer Pattern/: AssemblyCompany.h  BYD.cpp  CMakeLists.txt  Subject.h
src/Prototype Pattern/: CMakeLists.txt  Prototype.h
src/Specification Pattern/: CMakeLists.txt  CarPart.hpp  specifications.hpp
src/Specification Pattern/WithoutPattern/: test_without_pattern.cpp
src/State Pattern/: CMakeLists.txt  StatePattern.cpp  StatePattern.h  real.cpp
src/Strategy Pattern/: CMakeLists.txt  dijkstra.cpp  real.cpp  test.cpp  utility.h
src/Visitor Pattern/: CMakeLists.txt  test.cpp
src/VisitorPattern/: visitor.h
